add work section

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,66 @@
                 </div>
             </div>
         </div>
+        <div class="work">
+            <div class="work__container main-container">
+                <div class="project">
+                    <div class="project__wrapper-image"><img class="project__image" src="assets/media/work1.jpg" alt=""></div>
+                    <div class="project__info">
+                        <h2 class="project__title">Project Name</h2>
+                        <p class="project__description">User Interface Design</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project__wrapper-image"><img class="project__image" src="assets/media/work2.jpg" alt=""></div>
+                    <div class="project__info">
+                        <h2 class="project__title">Project Name</h2>
+                        <p class="project__description">User Interface Design</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project__wrapper-image"><img class="project__image" src="assets/media/work3.jpg" alt=""></div>
+                    <div class="project__info">
+                        <h2 class="project__title">Project Name</h2>
+                        <p class="project__description">User Interface Design</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project__wrapper-image"><img class="project__image" src="assets/media/work4.jpg" alt=""></div>
+                    <div class="project__info">
+                        <h2 class="project__title">Project Name</h2>
+                        <p class="project__description">User Interface Design</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project__wrapper-image"><img class="project__image" src="assets/media/work5.jpg" alt=""></div>
+                    <div class="project__info">
+                        <h2 class="project__title">Project Name</h2>
+                        <p class="project__description">User Interface Design</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project__wrapper-image"><img class="project__image" src="assets/media/work6.jpg" alt=""></div>
+                    <div class="project__info">
+                        <h2 class="project__title">Project Name</h2>
+                        <p class="project__description">User Interface Design</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project__wrapper-image"><img class="project__image" src="assets/media/work7.jpg" alt=""></div>
+                    <div class="project__info">
+                        <h2 class="project__title">Project Name</h2>
+                        <p class="project__description">User Interface Design</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project__wrapper-image"><img class="project__image" src="assets/media/work8.jpg" alt=""></div>
+                    <div class="project__info">
+                        <h2 class="project__title">Project Name</h2>
+                        <p class="project__description">User Interface Design</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
