--- a/src/index.html
+++ b/src/index.html
@@ -230,7 +230,7 @@
         </div>
         <div class="footer__wrapper-copy">
             <div id="footer" class="main-container footer__copy">
-                Copyright © 2015 ActiveBox. All Rights Reserved Made with <span class="footer__copy-highligh">by Kamal Chaneman</span>
+                Copyright © 2015 ActiveBox. All Rights Reserved Made with <span class="footer__copy-highlight">by Kamal Chaneman</span>
             </div>
         </div>
     </footer>
