--- a/src/index.html
+++ b/src/index.html
@@ -191,6 +191,13 @@
                 </div>
             </div>
         </div>
+        <div id="download" class="download">
+            <div class="download__container main-container">
+                <h1 class="download__text">Are You Ready to Start? Download Now For Free!</h1>
+                <p class="download__description">Fusce dapibus, tellus ac cursus commodo</p>
+                <button class="button download__button">download here</button>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="footer__wrapper-info">
