--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,10 @@
                 </svg>
             </a>
             <div class="header__toggle-menu">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 18" fill="none">
-                    <path d="M0 0H24V3H0V0ZM0 7.5H24V10.5H0V7.5ZM0 15H24V18H0V15Z" fill="white"/>
-                </svg>
+                <div class="header__toogle-item"></div>
             </div>
             <nav class="header__nav">
-                <ul class="header__list">
+                <ul class="header__nav-list">
                     <li class="header__list-item">
                         <a class="header__link" href="#features">Features</a>
                     </li>
@@ -357,5 +355,6 @@
             </div>
         </div>
     </footer>
+    <script src="assets/scripts/script.js"></script>
 </body>
 </html>
