--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="assets/styles/style.scss">
 </head>
 <body>
@@ -291,13 +293,55 @@
                 </div>
             </div>
         </div>
+        <div id="testimonials" class="testimonials">
+            <div class="swiper testimonials__swiper">
+                <div class="testimonials__swiper-wrapper swiper-wrapper">
+                    <div class="testimonials__slide swiper-slide">
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__slide-info">
+                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                        </div>
+                    </div>
+                    <div class="testimonials__slide swiper-slide">
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__slide-info">
+                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                        </div>
+                    </div>
+                    <div class="testimonials__slide swiper-slide">
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__slide-info">
+                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                        </div>
+                    </div>
+                    <div class="testimonials__slide swiper-slide">
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__slide-info">
+                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                        </div>
+                    </div>
+                    <div class="testimonials__slide swiper-slide">
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__slide-info">
+                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonials__pagination swiper-pagination"></div>
+            </div>
+        </div>
         <section id="download" class="download">
             <div class="download__container main-container">
                 <h2 class="download__text">Are You Ready to Start? Download Now For Free!</h2>
                 <p class="download__description">Fusce dapibus, tellus ac cursus commodo</p>
                 <button class="button download__button">download here</button>
             </div>
-        </ы>
+        </section>
     </main>
     <footer id="footer" class="footer">
         <div class="footer__wrapper-info">
@@ -338,6 +382,7 @@
             </p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/scripts/script.js"></script>
 </body>
 </html>
