add different slides

--- a/src/index.html
+++ b/src/index.html
@@ -305,31 +305,31 @@
                         </div>
                     </div>
                     <div class="testimonials__slide swiper-slide">
-                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide2.jpg" alt=""></div>
                         <div class="testimonials__slide-info">
-                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
-                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                            <p class="testimonials__slide-quote">“Vestibulum id ligula porta felis euismod semper. Set the user experience in motion. Pellentesque ornare sem lacinia quam...”</p>
+                            <p class="testimonials__slide-person">Samantha Smith, User Experience Specialist at XYZZ</p>
                         </div>
                     </div>
                     <div class="testimonials__slide swiper-slide">
-                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide3.jpg" alt=""></div>
                         <div class="testimonials__slide-info">
-                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
-                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                            <p class="testimonials__slide-quote">“Maecenas faucibus mollis interdum. Crafting interfaces is her passion. Curabitur blandit tempus porttitor...”</p>
+                            <p class="testimonials__slide-person">Sarah Sanders, Interface Architect at XYZ</p>
                         </div>
                     </div>
                     <div class="testimonials__slide swiper-slide">
-                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide4.jpg" alt=""></div>
                         <div class="testimonials__slide-info">
-                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
-                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                            <p class="testimonials__slide-quote">“Nullam quis risus eget urna mollis ornare vel eu leo. Developing interactions is his forte. Cras mattis consectetur purus sit amet fermentum...”</p>
+                            <p class="testimonials__slide-person">Steven Stewart, Interaction Developer at XYZ</p>
                         </div>
                     </div>
                     <div class="testimonials__slide swiper-slide">
-                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide1.jpg" alt=""></div>
+                        <div class="testimonials__wrapper-image"><img class="testimonials__image" src="assets/media/slide5.jpg" alt=""></div>
                         <div class="testimonials__slide-info">
-                            <p class="testimonials__slide-quote">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
-                            <p class="testimonials__slide-person">Susan Sims, Interaction Designer at XYZ</p>
+                            <p class="testimonials__slide-quote">“Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Designing UX is her calling. Donec ullamcorper nulla non metus auctor fringilla...”</p>
+                            <p class="testimonials__slide-person">Sophie Scott, UX Designer at XYZ</p>
                         </div>
                     </div>
                 </div>
